Fix z-index on place badges

--- a/htdocs/themes/berlin_mcjc/sass/_place.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_place.scss
@@ -6,6 +6,7 @@
   position: absolute;
   right: 64px;
   top: -64px;
+  z-index: 2;
 
   a {
     background: transparent;
